--- a/specification/cognitiveservices/Language.QuestionAnswering-authoring/examples/2025-05-15-preview/questionanswering/authoring/SuccessfulImportProjectFromFile.json
+++ b/specification/cognitiveservices/Language.QuestionAnswering-authoring/examples/2025-05-15-preview/questionanswering/authoring/SuccessfulImportProjectFromFile.json
@@ -6,7 +6,9 @@
     "Endpoint": "{Endpoint}",
     "Ocp-Apim-Subscription-Key": "{API key}",
     "api-version": "2025-05-15-preview",
-    "files": "{raw binary files}"
+    "files": [
+      "{binary file}"
+    ]
   },
   "responses": {
     "202": {
