--- a/specification/cognitiveservices/Language.QuestionAnswering-authoring/examples/2025-05-15-preview/questionanswering/authoring/SuccessfulImportProjectFromFile.json
+++ b/specification/cognitiveservices/Language.QuestionAnswering-authoring/examples/2025-05-15-preview/questionanswering/authoring/SuccessfulImportProjectFromFile.json
@@ -8,7 +8,8 @@
     "api-version": "2025-05-15-preview",
     "files": [
       "{binary file}"
-    ]
+    ],
+    "projectName": "proj1"
   },
   "responses": {
     "202": {
