--- a/specification/ai/data-plane/Azure.AI.Projects/preview/2025-05-15-preview/azure-ai-projects.json
+++ b/specification/ai/data-plane/Azure.AI.Projects/preview/2025-05-15-preview/azure-ai-projects.json
@@ -2904,7 +2904,8 @@
         },
         "result": {
           "$ref": "#/definitions/ErrorClusterResult",
-          "description": "The result of the cluster analysis."
+          "description": "The result of the cluster analysis.",
+          "readOnly": true
         }
       },
       "required": [
