--- a/specification/web/resource-manager/Microsoft.Web/stable/2024-11-01/examples/ListWorkflowsConfigurationConnections_Slot.json
+++ b/specification/web/resource-manager/Microsoft.Web/stable/2024-11-01/examples/ListWorkflowsConfigurationConnections_Slot.json
@@ -43,6 +43,6 @@
       "headers": {}
     }
   },
-  "operationId": "WebApps_ListWorkflowsConnections",
-  "title": "List the Instance Workflows Configuration Connections"
+  "operationId": "WebApps_ListWorkflowsConnectionsSlot",
+  "title": "List the Instance Workflows Configuration Connections Slot"
 }
