--- a/specification/resourceconnector/resource-manager/Microsoft.ResourceConnector/stable/2022-10-27/examples/AppliancesListOperations.json
+++ b/specification/resourceconnector/resource-manager/Microsoft.ResourceConnector/stable/2022-10-27/examples/AppliancesListOperations.json
@@ -14,8 +14,8 @@
               "provider": "Microsoft ResourceConnector",
               "resource": "Operations"
             },
-            "origin": "user,system",
-            "isDataAction": false
+            "isDataAction": false,
+            "origin": "user,system"
           },
           {
             "name": "Microsoft.ResourceConnector/register/action",
@@ -25,8 +25,8 @@
               "provider": "Microsoft ResourceConnector",
               "resource": "Appliances Resource Provider"
             },
-            "origin": "user,system",
-            "isDataAction": false
+            "isDataAction": false,
+            "origin": "user,system"
           },
           {
             "name": "Microsoft.ResourceConnector/appliances/read",
@@ -36,8 +36,8 @@
               "provider": "Microsoft ResourceConnector",
               "resource": "Appliances"
             },
-            "origin": "user,system",
-            "isDataAction": false
+            "isDataAction": false,
+            "origin": "user,system"
           },
           {
             "name": "Microsoft.ResourceConnector/appliances/write",
@@ -47,8 +47,8 @@
               "provider": "Microsoft ResourceConnector",
               "resource": "Appliances"
             },
-            "origin": "user,system",
-            "isDataAction": false
+            "isDataAction": false,
+            "origin": "user,system"
           },
           {
             "name": "Microsoft.ResourceConnector/appliances/delete",
@@ -58,8 +58,8 @@
               "provider": "Microsoft ResourceConnector",
               "resource": "Appliances"
             },
-            "origin": "user,system",
-            "isDataAction": false
+            "isDataAction": false,
+            "origin": "user,system"
           },
           {
             "name": "Microsoft.ResourceConnector/appliances/listClusterUserCredential",
@@ -69,8 +69,8 @@
               "provider": "Microsoft ResourceConnector",
               "resource": "Appliances"
             },
-            "origin": "user,system",
-            "isDataAction": false
+            "isDataAction": false,
+            "origin": "user,system"
           },
           {
             "name": "Microsoft.ResourceConnector/locations/operationsstatus/read",
@@ -80,8 +80,8 @@
               "provider": "Microsoft ResourceConnector",
               "resource": "Appliance Operation Status"
             },
-            "origin": "user,system",
-            "isDataAction": false
+            "isDataAction": false,
+            "origin": "user,system"
           },
           {
             "name": "Microsoft.ResourceConnector/locations/operationresults/read",
@@ -91,11 +91,13 @@
               "provider": "Microsoft ResourceConnector",
               "resource": "Appliance Operation Result"
             },
-            "origin": "user,system",
-            "isDataAction": false
+            "isDataAction": false,
+            "origin": "user,system"
           }
         ]
       }
     }
-  }
+  },
+  "operationId": "Appliances_ListOperations",
+  "title": "List Appliances operations"
 }
