fix LRO response

--- a/specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-06-01/netapp.json
+++ b/specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-06-01/netapp.json
@@ -936,7 +936,8 @@
           }
         },
         "x-ms-long-running-operation-options": {
-          "final-state-via": "location"
+          "final-state-via": "location",
+          "final-state-schema": "#/definitions/NetAppAccount"
         },
         "x-ms-long-running-operation": true
       },
@@ -1622,7 +1623,8 @@
           }
         },
         "x-ms-long-running-operation-options": {
-          "final-state-via": "location"
+          "final-state-via": "location",
+          "final-state-schema": "#/definitions/BackupVault"
         },
         "x-ms-long-running-operation": true
       },
@@ -2001,7 +2003,8 @@
           }
         },
         "x-ms-long-running-operation-options": {
-          "final-state-via": "location"
+          "final-state-via": "location",
+          "final-state-schema": "#/definitions/NetAppAccount"
         },
         "x-ms-long-running-operation": true
       },
@@ -5189,7 +5192,8 @@
           }
         },
         "x-ms-long-running-operation-options": {
-          "final-state-via": "location"
+          "final-state-via": "location",
+          "final-state-schema": "#/definitions/Snapshot"
         },
         "x-ms-long-running-operation": true
       },
@@ -7076,7 +7080,8 @@
           }
         },
         "x-ms-long-running-operation-options": {
-          "final-state-via": "location"
+          "final-state-via": "location",
+          "final-state-schema": "#/definitions/SnapshotPolicy"
         },
         "x-ms-long-running-operation": true
       },
@@ -7463,7 +7468,8 @@
           }
         },
         "x-ms-long-running-operation-options": {
-          "final-state-via": "location"
+          "final-state-via": "location",
+          "final-state-schema": "#/definitions/VolumeGroupDetails"
         },
         "x-ms-long-running-operation": true
       },
