emitter-output-dir

--- a/specification/netapp/NetApp.Management/tspconfig.yaml
+++ b/specification/netapp/NetApp.Management/tspconfig.yaml
@@ -28,6 +28,7 @@ options:
     generate-sample: true
     flavor: "azure"
   "@azure-tools/typespec-java":
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-resourcemanager-netapp"
     package-dir: "azure-resourcemanager-netapp"
     namespace: "com.azure.resourcemanager.netapp"
     service-name: "NetAppFiles"
@@ -39,6 +40,7 @@ options:
     package-details:
       name: "@azure/arm-netapp"
   "@azure-tools/typespec-go":
+    emitter-output-dir: "{output-dir}/{service-dir}/armnetapp"
     service-dir: "sdk/resourcemanager/netapp"
     package-dir: "armnetapp"
     module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
