resolve pipeline error

--- a/specification/cognitiveservices/data-plane/Speech/SpeechToText/stable/2025-10-15/examples/get_project_datasets.json
+++ b/specification/cognitiveservices/data-plane/Speech/SpeechToText/stable/2025-10-15/examples/get_project_datasets.json
@@ -28,7 +28,7 @@
             "properties": {
               "acceptedLineCount": 11,
               "rejectedLineCount": 2,
-              "duration": "PT4M12S",
+              "durationMilliseconds": 252000,
               "textNormalizationKind": "Default"
             }
           },
