--- a/specification/cognitiveservices/data-plane/Speech/SpeechToText/stable/2025-10-15/examples/get_project_endpoints.json
+++ b/specification/cognitiveservices/data-plane/Speech/SpeechToText/stable/2025-10-15/examples/get_project_endpoints.json
@@ -22,19 +22,12 @@
             "description": "Example for speech endpoint",
             "locale": "en-US",
             "links": {
-              "restInteractive": "https://westus.stt.speech.microsoft.com/speech/recognition/interactive/cognitiveservices/v1?cid=afa0669c-a01e-4693-ae3a-93baf40f26d6",
-              "restConversation": "https://westus.stt.speech.microsoft.com/speech/recognition/conversation/cognitiveservices/v1?cid=afa0669c-a01e-4693-ae3a-93baf40f26d6",
-              "restDictation": "https://westus.stt.speech.microsoft.com/speech/recognition/dictation/cognitiveservices/v1?cid=afa0669c-a01e-4693-ae3a-93baf40f26d6",
-              "webSocketInteractive": "wss://westus.stt.speech.microsoft.com/speech/recognition/interactive/cognitiveservices/v1?cid=afa0669c-a01e-4693-ae3a-93baf40f26d6",
-              "webSocketConversation": "wss://westus.stt.speech.microsoft.com/speech/recognition/conversation/cognitiveservices/v1?cid=afa0669c-a01e-4693-ae3a-93baf40f26d6",
-              "webSocketDictation": "wss://westus.stt.speech.microsoft.com/speech/recognition/dictation/cognitiveservices/v1?cid=afa0669c-a01e-4693-ae3a-93baf40f26d6",
-              "logs": "https://westus.api.cognitive.microsoft.com/speechtotext/endpoints/afa0669c-a01e-4693-ae3a-93baf40f26d6/files/logs?api-version=2025-10-15"
+              "webSocket": "wss://westus.stt.speech.microsoft.com/stt/speech/universal/v2?cid=afa0669c-a01e-4693-ae3a-93baf40f26d6"
             },
             "createdDateTime": "2019-01-07T11:34:12Z",
             "lastActionDateTime": "2019-01-07T11:36:07Z",
             "properties": {
-              "loggingEnabled": true,
-              "timeToLive": "PT30M"
+              "loggingEnabled": true
             },
             "status": "Succeeded"
           },
@@ -47,19 +40,12 @@
             "description": "Example for speech endpoint",
             "locale": "en-US",
             "links": {
-              "restInteractive": "https://westus.stt.speech.microsoft.com/speech/recognition/interactive/cognitiveservices/v1?cid=afa0669c-a01e-4693-ae3a-93baf40f26d6",
-              "restConversation": "https://westus.stt.speech.microsoft.com/speech/recognition/conversation/cognitiveservices/v1?cid=afa0669c-a01e-4693-ae3a-93baf40f26d6",
-              "restDictation": "https://westus.stt.speech.microsoft.com/speech/recognition/dictation/cognitiveservices/v1?cid=afa0669c-a01e-4693-ae3a-93baf40f26d6",
-              "webSocketInteractive": "wss://westus.stt.speech.microsoft.com/speech/recognition/interactive/cognitiveservices/v1?cid=afa0669c-a01e-4693-ae3a-93baf40f26d6",
-              "webSocketConversation": "wss://westus.stt.speech.microsoft.com/speech/recognition/conversation/cognitiveservices/v1?cid=afa0669c-a01e-4693-ae3a-93baf40f26d6",
-              "webSocketDictation": "wss://westus.stt.speech.microsoft.com/speech/recognition/dictation/cognitiveservices/v1?cid=afa0669c-a01e-4693-ae3a-93baf40f26d6",
-              "logs": "https://westus.api.cognitive.microsoft.com/speechtotext/endpoints/afa0669c-a01e-4693-ae3a-93baf40f26d6/files/logs?api-version=2025-10-15"
+              "webSocket": "wss://westus.stt.speech.microsoft.com/stt/speech/universal/v2?cid=afa0669c-a01e-4693-ae3a-93baf40f26d6"
             },
             "createdDateTime": "2019-01-07T11:34:12Z",
             "lastActionDateTime": "2019-01-07T11:36:07Z",
             "properties": {
-              "loggingEnabled": false,
-              "timeToLive": "PT30M"
+              "loggingEnabled": false
             },
             "status": "NotStarted"
           }
