--- a/specification/cognitiveservices/data-plane/Speech/SpeechToText/stable/2025-10-15/examples/get_project_models.json
+++ b/specification/cognitiveservices/data-plane/Speech/SpeechToText/stable/2025-10-15/examples/get_project_models.json
@@ -6,7 +6,7 @@
     "id": "abc46f33-90b8-443d-adad-4870517356e0",
     "skip": 0,
     "top": 2,
-    "filter": "status%20eq%20\u0027Running\u0027"
+    "filter": "status%20eq%20'Running'"
   },
   "responses": {
     "200": {
