--- a/specification/cognitiveservices/data-plane/Speech/SpeechToText/stable/2025-10-15/examples/get_project_transcriptions.json
+++ b/specification/cognitiveservices/data-plane/Speech/SpeechToText/stable/2025-10-15/examples/get_project_transcriptions.json
@@ -29,7 +29,6 @@
               "files": "https://westus.api.cognitive.microsoft.com/speechtotext/transcriptions/ba7ea6f5-3065-40b7-b49a-a90f48584683/files?api-version=2025-10-15"
             },
             "properties": {
-              "diarizationEnabled": false,
               "wordLevelTimestampsEnabled": false,
               "displayFormWordLevelTimestampsEnabled": false,
               "channels": [
@@ -38,8 +37,8 @@
               ],
               "punctuationMode": "DictatedAndAutomatic",
               "profanityFilterMode": "Masked",
-              "duration": "PT42S",
-              "timeToLive": "P2D"
+              "timeToLiveHours": 48,
+              "durationMilliseconds": 42000
             },
             "status": "Succeeded"
           },
@@ -63,7 +62,6 @@
               "files": "https://westus.api.cognitive.microsoft.com/speechtotext/transcriptions/ba7ea6f5-3065-40b7-b49a-a90f48584683/files?api-version=2025-10-15"
             },
             "properties": {
-              "diarizationEnabled": false,
               "wordLevelTimestampsEnabled": false,
               "displayFormWordLevelTimestampsEnabled": true,
               "channels": [
@@ -72,8 +70,8 @@
               ],
               "punctuationMode": "DictatedAndAutomatic",
               "profanityFilterMode": "Masked",
-              "duration": "PT42S",
-              "timeToLive": "P2D"
+              "timeToLiveHours": 48,
+              "durationMilliseconds": 42000
             },
             "status": "Failed"
           }
