--- a/specification/ai/DocumentIntelligence/tspconfig.yaml
+++ b/specification/ai/DocumentIntelligence/tspconfig.yaml
@@ -56,7 +56,8 @@ options:
   "@azure-tools/typespec-ts":
     title: DocumentIntelligence
     package-dir: "ai-document-intelligence-rest"
-    is-modular-library: false
+    generate-samples: true
+    is-modular-library: true
     generate-metadata: true
     package-details:
       name: "@azure-rest/ai-document-intelligence"
