--- a/specification/loadtestservice/data-plane/playwright/tspconfig.yaml
+++ b/specification/loadtestservice/data-plane/playwright/tspconfig.yaml
@@ -28,7 +28,8 @@ options:
     title: PlaywrightServiceClient
     description: Microsoft Playwright Service Client
     generate-metadata: true
-    is-modular-library: false
+    generate-samples: true
+    is-modular-library: true
     generate-test: false
     package-details:
       name: "@azure-rest/playwright"
