--- a/specification/contosowidgetmanager/Contoso.Management/tspconfig.yaml
+++ b/specification/contosowidgetmanager/Contoso.Management/tspconfig.yaml
@@ -27,7 +27,7 @@ options:
     service-name: "Contoso" # human-readable service name, whitespace allowed
     flavor: azure
   "@azure-tools/typespec-ts":
-    emitter-output-dir: "{output-dir}/{service-dir}/arm-contoso"
+    emitter-output-dir: "{cwd}/{service-dir}/arm-contoso"
     flavor: azure
     experimental-extensible-enums: true
     package-details:
