--- a/specification/servicefabricmanagedclusters/ServiceFabricManagedClusters.Management/tspconfig.yaml
+++ b/specification/servicefabricmanagedclusters/ServiceFabricManagedClusters.Management/tspconfig.yaml
@@ -27,7 +27,7 @@ options:
     generate-sample: true
     flavor: azure
   "@azure-tools/typespec-ts":
-    emitter-output-dir: "{output-dir}/{service-dir}/arm-servicefabricmanagedclusters"
+    emitter-output-dir: "{cwd}/{service-dir}/arm-servicefabricmanagedclusters"
     package-details:
       name: "@azure/arm-servicefabricmanagedclusters"
     flavor: azure
