--- a/specification/storageactions/StorageAction.Management/tspconfig.yaml
+++ b/specification/storageactions/StorageAction.Management/tspconfig.yaml
@@ -29,7 +29,7 @@ options:
     service-name: "StorageActions" # human-readable service name, whitespace allowed
     flavor: azure
   "@azure-tools/typespec-ts":
-    emitter-output-dir: "{output-dir}/{service-dir}/arm-storageactions"
+    emitter-output-dir: "{cwd}/{service-dir}/arm-storageactions"
     is-modular-library: true
     flavor: "azure"
     experimental-extensible-enums: true
