--- a/specification/widget/data-plane/WidgetAnalytics/tspconfig.yaml
+++ b/specification/widget/data-plane/WidgetAnalytics/tspconfig.yaml
@@ -28,7 +28,7 @@ options:
     namespace: "Azure.WidgetAnalytics"
     flavor: azure
   "@azure-tools/typespec-ts":
-    emitter-output-dir: "{output-dir}/{service-dir}/widget-analytics-rest"
+    emitter-output-dir: "{cwd}/{service-dir}/widget-analytics-rest"
     package-details:
       name: "@azure-rest/azure-widget-analytics"
     flavor: azure
