--- a/specification/signalr/SignalRService.Management/tspconfig.yaml
+++ b/specification/signalr/SignalRService.Management/tspconfig.yaml
@@ -35,7 +35,7 @@ options:
       - resource: SignalRResource
         collection: SignalR
   "@azure-tools/typespec-ts":
-    emitter-output-dir: "{output-dir}/{service-dir}/arm-signalr"
+    emitter-output-dir: "{cwd}/{service-dir}/arm-signalr"
     flavor: azure
     experimental-extensible-enums: true
     package-details:
