--- a/specification/verifiedid/Microsoft.VerifiedId.Management/tspconfig.yaml
+++ b/specification/verifiedid/Microsoft.VerifiedId.Management/tspconfig.yaml
@@ -17,7 +17,7 @@ options:
     use-read-only-status-schema: true
   "@azure-tools/typespec-ts":
     experimental-extensible-enums: true
-    emitter-output-dir: "{output-dir}/{service-dir}/arm-verifiedid"
+    emitter-output-dir: "{cwd}/{service-dir}/arm-verifiedid"
     flavor: azure
     package-details:
       name: "@azure/arm-verifiedid"
