--- a/specification/workloads/Workloads.SAPMonitor.Management/tspconfig.yaml
+++ b/specification/workloads/Workloads.SAPMonitor.Management/tspconfig.yaml
@@ -15,7 +15,7 @@ options:
     output-file: "{azure-resource-provider-folder}/{service-name}/monitors/{version-status}/{version}/monitors.json"
   "@azure-tools/typespec-ts":
     experimental-extensible-enums: true
-    emitter-output-dir: "{output-dir}/{service-dir}/arm-sapmonitors"
+    emitter-output-dir: "{cwd}/{service-dir}/arm-sapmonitors"
     flavor: azure
     package-details:
       name: "@azure/arm-sapmonitors"
